--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.4.3",
+    "chart.js": "^4.4.4",
     "clerk": "^0.8.3",
     "express": "^4.19.2",
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1"
