--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "mongoose": "^8.6.0"
+    "mongoose": "^8.6.0",
+    "multer": "^1.4.5-lts.1",
+    "mutter": "^1.0.1"
   },
   "description": ""
 }
