--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.4.3",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "clerk": "^0.8.3",
     "express": "^4.19.2",
