--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "mongoose": "^8.6.0",
+    "express": "^4.21.1",
+    "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "mutter": "^1.0.1"
   },
