--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^5.4.3",
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.7",
+    "axois": "^0.0.1-security",
     "chart.js": "^4.4.4",
     "clerk": "^0.8.3",
     "express": "^4.19.2",
